--- a/src/Global.scss
+++ b/src/Global.scss
@@ -6,3 +6,7 @@ $gray-color: #d9d9d9;
 $placeholder-color: #4a4a4a;
 $background-color: #212529;
 $branckground-secondary-color: #1d2022;
+
+body {
+  background-color: $branckground-secondary-color;
+}
