--- a/src/Global.scss
+++ b/src/Global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Noto+Serif:wght@400;500;600;700&display=swap');
+
 $primary-color: #0088c2;
 $main-white: #f9f9f9;
 $invalid-color: #ff5555;
@@ -5,4 +7,8 @@ $success-color: #268f3ff5;
 $gray-color: #d9d9d9;
 $placeholder-color: #4a4a4a;
 $background-color: #212529;
-$branckground-secondary-color: #1d2022;
+$background-secondary-color: #1d2022;
+
+* {
+  font-family: 'Montserrat', sans-serif;
+}
