--- a/src/Global.scss
+++ b/src/Global.scss
@@ -14,7 +14,7 @@ $font-size-medium-small: 14px;
 $font-size-medium: 16px;
 $font-size-medium-large: 18px;
 $font-size-large: 20px;
-$font-size-extra-large: 24px;
+$font-size-extra-large: 22px;
 
 body {
   background-color: $background-secondary-color;
@@ -22,4 +22,28 @@ body {
 
 * {
   font-family: "Montserrat", sans-serif;
+}
+
+.fontSizeSmall {
+  font-size: $font-size-small;
+}
+
+.fontSizeMediumSmall {
+  font-size: $font-size-medium-small;
+}
+
+.fontSizeMedium {
+  font-size: $font-size-medium;
+}
+
+.fontSizeMediumLarge {
+  font-size: font-size-medium-large;
+}
+
+.fontSizeLarge {
+  font-size: font-size-large;
+}
+
+.fontSizeExtraLarge {
+  font-size: $font-size-extra-large;
 }
