--- a/src/Components/Templates/CloseTemplate/CloseTemplate.module.scss
+++ b/src/Components/Templates/CloseTemplate/CloseTemplate.module.scss
@@ -1,4 +1,4 @@
-@import '../../../Global.scss';
+@import "../../../Global.scss";
 
 .container {
   display: flex;
@@ -13,8 +13,8 @@
     justify-content: center;
     flex-direction: column;
     width: 336px;
-    .infoSchedule {
 
+    .infoSchedule {
       display: flex;
       flex-direction: column;
       align-items: center;
