--- a/src/Components/Templates/FormTemplate/FormTemplate.module.scss
+++ b/src/Components/Templates/FormTemplate/FormTemplate.module.scss
@@ -1,4 +1,4 @@
-@import '../../../Global.scss';
+@import "../../../Global.scss";
 
 .container {
   display: flex;
@@ -6,4 +6,21 @@
   align-items: center;
   width: 100%;
   color: $main-white;
+
+  .inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+  }
+
+  .linkContainer {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: -5px 0 0 0;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
