feat: Update initial page

--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,11 +1,13 @@
 @import "../../Global.scss";
 
-    .infoSchedule {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      p {
-        margin-top: -5px;
-      }
-    }
+.infoSchedule {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 350px;
+
+  p {
+    margin-top: -5px;
+  }
+}
