--- a/src/Components/Atoms/Input/Input.module.scss
+++ b/src/Components/Atoms/Input/Input.module.scss
@@ -61,12 +61,11 @@
 }
 
 .labelError {
-  position: absolute;
-  transform: translate(4px, 52px);
   color: $invalid-color;
   font-size: 12px;
   font-weight: 600;
-
+  margin-top: 2px;
+  margin-left: 2px;
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
