--- a/src/Components/Atoms/Input/Input.module.scss
+++ b/src/Components/Atoms/Input/Input.module.scss
@@ -72,3 +72,13 @@
   -ms-user-select: none;
   -khtml-user-select: none;
 }
+
+.caption {
+  margin-top: 2px;
+  margin-left: 2px;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+}
