--- a/src/Components/Molecules/Caption/Caption.module.scss
+++ b/src/Components/Molecules/Caption/Caption.module.scss
@@ -1,8 +1,8 @@
 .captionContainer {
   display: flex;
   align-items: center;
-  gap: 5px;
-  margin: -5px 0 0 0;
+  margin-top: 8px;
+  gap: 4px;
 
   &:hover {
     cursor: pointer;
