--- a/src/Global.scss
+++ b/src/Global.scss
@@ -22,7 +22,7 @@ $font-weight-semibold: 600;
 $font-weight-bold: 700;
 
 body {
-  background-color: $background-secondary-color;
+  background-color: $background-color;
 }
 
 * {
