feat: update details

--- a/src/Components/Organism/ItemCard/ItemCard.module.scss
+++ b/src/Components/Organism/ItemCard/ItemCard.module.scss
@@ -7,7 +7,7 @@
   background-color: $main-white;
   padding: 8px;
   box-shadow: 0 0 10px black;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
