--- a/src/Components/Templates/OrderTemplate/OrderTemplate.module.scss
+++ b/src/Components/Templates/OrderTemplate/OrderTemplate.module.scss
@@ -18,6 +18,26 @@
     position: absolute;
     top: 12px;
     right: 12px;
+    padding: 8px 4px;
+
+    .quantityNotification {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50px;
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      background-color: $primary-color;
+      top: -6px;
+      right: -2px;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+
+      &.isVisible {
+        opacity: 1;
+      }
+    }
 
     &:hover {
       cursor: pointer;
