--- a/src/Components/Organism/ItemCard/ItemCard.module.scss
+++ b/src/Components/Organism/ItemCard/ItemCard.module.scss
@@ -24,7 +24,7 @@
     min-width: 130px;
     border-radius: 5px;
     border: 1px solid $placeholder-color;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 
     & > div {
       height: 100%;
