--- a/src/Components/Templates/OrderTemplate/OrderTemplate.module.scss
+++ b/src/Components/Templates/OrderTemplate/OrderTemplate.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: calc(100% - 16px);
+  width: 100%;
   color: $main-white;
   max-width: 450px;
   margin-bottom: 40px;
@@ -49,7 +49,6 @@
     overflow-x: scroll;
     gap: 22px;
     width: 100%;
-    padding: 4px 8px;
     margin-top: 32px;
 
     &::-webkit-scrollbar {
@@ -67,6 +66,14 @@
 
     .type {
       color: $main-white;
+
+      &:first-child {
+        padding-left: 16px;
+      }
+
+      &:last-child {
+        padding-right: 16px;
+      }
 
       label {
         &:hover {
