--- a/src/Components/Atoms/ScrollUp/ScrollUp.module.scss
+++ b/src/Components/Atoms/ScrollUp/ScrollUp.module.scss
@@ -22,7 +22,7 @@
   }
 
   label {
-    padding: 4px;
+    padding: 4px 6px;
     border-radius: 5px;
     background-color: $background-color;
   }
