--- a/src/Components/Organism/Modal/Modal.module.scss
+++ b/src/Components/Organism/Modal/Modal.module.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: rgb(33,37,41, 60%);
+  background: rgb(33, 37, 41, 60%);
 }
 
 .modalContainer {
@@ -25,12 +25,22 @@
   background: $main-white;
   margin-bottom: 100px;
   border-radius: 8px;
-  box-shadow: 0px 4px 2px 0px rgba(255, 255, 255, 0.20);
+  box-shadow: 0px 2px 5px 0px rgba(255, 255, 255, 0.2);
   color: $placeholder-color;
+  animation: modalAnimation 0.5s ease forwards;
 }
 
 .modalImg {
   width: 100%;
   height: 150px;
   border-radius: 8px;
+}
+
+@keyframes modalAnimation {
+  from {
+    transform: translateY(-10px);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
