--- a/src/Components/Atoms/ScrollUp/ScrollUp.module.scss
+++ b/src/Components/Atoms/ScrollUp/ScrollUp.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   display: flex;
-
+  flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
   position: fixed;
