--- a/src/Components/Organism/OrderModal/OrderModal.module.scss
+++ b/src/Components/Organism/OrderModal/OrderModal.module.scss
@@ -1,15 +1,109 @@
 @import "../../../Global.scss";
 
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: fixed;
   width: 100vw;
   height: 100vh;
   z-index: 3;
   background-color: $background-color;
+  overflow-y: scroll;
 
   .closeModal {
     position: absolute;
     top: 8px;
     left: 8px;
   }
+
+  .orderContent {
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    max-width: 450px;
+    margin-top: 32px;
+    margin-bottom: 8px;
+    border-radius: 10px;
+    padding: 32px 12px;
+    background-color: $main-white;
+    color: black;
+
+    .orderInfo {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+    }
+
+    .orderItems {
+      display: flex;
+      flex-direction: column;
+      gap: 22px;
+
+      .orderItem {
+        .itemHeader {
+          display: flex;
+          align-items: center;
+          position: relative;
+          gap: 12px;
+
+          .deleteItemIco {
+            position: absolute;
+            right: 0;
+          }
+
+          .itemImage {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 50px;
+            width: 50px;
+            border-radius: 5px;
+            border: 1px solid $placeholder-color;
+            box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+
+            & > div {
+              height: 100%;
+              width: 100%;
+              border-radius: 5px;
+              background-size: cover;
+              background-repeat: no-repeat;
+              background-position: (50%, 50%);
+              filter: saturate(120%) contrast(105%);
+            }
+          }
+        }
+
+        .itemInfo {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 4px;
+          margin: 4px 0;
+        }
+      }
+    }
+
+    .orderValue {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+      margin-bottom: 32px;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 12px;
+    }
+  }
+}
+
+.line {
+  display: flex;
+  border-top: 1px solid black;
+  margin-bottom: 32px;
+  margin-top: 32px;
 }
