--- a/src/Components/Templates/OrderTemplate/OrderTemplate.module.scss
+++ b/src/Components/Templates/OrderTemplate/OrderTemplate.module.scss
@@ -26,8 +26,8 @@
       align-items: center;
       border-radius: 50px;
       position: absolute;
-      width: 16px;
-      height: 16px;
+      width: 18px;
+      height: 18px;
       background-color: $primary-color;
       top: -6px;
       right: -2px;
@@ -110,6 +110,13 @@
           cursor: pointer;
         }
       }
+    }
+
+    .menuItemByTypeEmpty {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 4px;
     }
   }
 }
