--- a/src/Components/Organism/ItemModal/ItemModal.module.scss
+++ b/src/Components/Organism/ItemModal/ItemModal.module.scss
@@ -1,6 +1,9 @@
 @import "../../../Global.scss";
 
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -48,6 +51,7 @@
     margin-top: 22px;
     gap: 8px;
     padding: 0 22px;
+    max-width: 450px;
   }
 
   .inputs {
