--- a/src/Components/Templates/CloseTemplate/CloseTemplate.module.scss
+++ b/src/Components/Templates/CloseTemplate/CloseTemplate.module.scss
@@ -28,7 +28,8 @@
     .randomImage {
       height: 200px;
       border-radius: 15px;
-      margin-top: 32px;
+      margin-top: 22px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
   }
 }
