--- a/src/Components/Organism/FeedbackModal/FeedbackModal.module.scss
+++ b/src/Components/Organism/FeedbackModal/FeedbackModal.module.scss
@@ -17,6 +17,7 @@
     align-items: center;
     max-width: 450px;
     width: 85%;
+    position: relative;
 
     .randomImage {
       height: 230px;
