--- a/src/Components/Organism/Modal/Modal.module.scss
+++ b/src/Components/Organism/Modal/Modal.module.scss
@@ -21,6 +21,7 @@
   height: fit-content;
   flex-direction: column;
   align-items: center;
+  position: relative;
   padding: 32px 32px 40px 32px;
   background: $main-white;
   margin-bottom: 100px;
@@ -28,6 +29,16 @@
   box-shadow: 0px 2px 5px 0px rgba(255, 255, 255, 0.2);
   color: $placeholder-color;
   animation: modalAnimation 0.5s ease forwards;
+}
+
+.closeModalIcon {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .modalImg {
