--- a/src/Components/Organism/Modal/Modal.module.scss
+++ b/src/Components/Organism/Modal/Modal.module.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   background: rgb(33, 37, 41, 60%);
+  backdrop-filter: blur(5px);
 }
 
 .modalContainer {
