--- a/src/Components/Organism/ItemCard/ItemCard.module.scss
+++ b/src/Components/Organism/ItemCard/ItemCard.module.scss
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 8px;
+    gap: 4px;
 
     span {
       display: flex;
@@ -57,5 +57,13 @@
 
   @media screen and (min-width: 440px) {
     border-radius: 5px;
+  }
+
+  @media screen and (max-width: 350px) {
+    height: auto;
+
+    .itemImage {
+      height: auto;
+    }
   }
 }
