--- a/src/Global.scss
+++ b/src/Global.scss
@@ -9,6 +9,7 @@ $placeholder-color: #4a4a4a;
 $background-color: #212529;
 $background-secondary-color: #1d2022;
 
+$font-size-extra-small: 10px;
 $font-size-small: 12px;
 $font-size-medium-small: 14px;
 $font-size-medium: 16px;
@@ -32,6 +33,10 @@ body.modal-open {
 * {
   font-family: "Montserrat", sans-serif;
   -webkit-tap-highlight-color: transparent;
+}
+
+.fontSizeExtraSmall {
+  font-size: $font-size-extra-small;
 }
 
 .fontSizeSmall {
