--- a/src/Components/Organism/Modal/Modal.module.scss
+++ b/src/Components/Organism/Modal/Modal.module.scss
@@ -44,8 +44,9 @@
 
 .modalImg {
   width: 100%;
-  height: 150px;
+  height: 190px;
   border-radius: 8px;
+  box-shadow: 0 2px 4px $placeholder-color;
 }
 
 @keyframes modalAnimation {
