--- a/src/Components/Templates/CloseTemplate/CloseTemplate.module.scss
+++ b/src/Components/Templates/CloseTemplate/CloseTemplate.module.scss
@@ -25,11 +25,23 @@
       }
     }
 
-    .randomImage {
-      height: 200px;
-      border-radius: 15px;
-      margin-top: 22px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    .imageContent {
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      position: relative;
+
+      .randomImage {
+        height: 200px;
+        border-radius: 15px;
+        margin-top: 22px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+
+      label {
+        position: absolute;
+        text-shadow: 2px 2px 2px rgb(0, 0, 0);
+      }
     }
   }
 }
