--- a/src/Components/Organism/RecentOrdersCard/RecentOrdersCard.module.scss
+++ b/src/Components/Organism/RecentOrdersCard/RecentOrdersCard.module.scss
@@ -15,7 +15,7 @@
   flex-direction: column;
   gap: 12px;
   width: 190px;
-  margin-top: 20px;
+  margin-top: 12px;
 
   .recentOrderCards {
     display: flex;
@@ -23,22 +23,30 @@
     position: relative;
     width: 100%;
     // height: 70px;
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: $main-white;
     padding: 10px;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
 
-    .infoSide {
+    .icons {
       display: flex;
-      flex-direction: column;
-    }
-
-    .closeIcon {
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
       position: absolute;
       top: 5px;
       right: 5px;
       transition: 0.5s;
+    }
 
+    .openOrderIcon {
+      scale: 1.1;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .closeIcon {
       &:hover {
         cursor: pointer;
       }
