--- a/src/Components/Organism/RecentOrdersCard/RecentOrdersCard.module.scss
+++ b/src/Components/Organism/RecentOrdersCard/RecentOrdersCard.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   margin: 32px 0;
+  min-width: 250px;
 }
 
 .content {
@@ -14,14 +15,14 @@
   align-items: center;
   flex-direction: column;
   gap: 12px;
-  width: 190px;
   margin-top: 12px;
 
   .recentOrderCards {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 100%;
+    gap: 2px;
+    width: 190px;
     // height: 70px;
     border-radius: 5px;
     background-color: $main-white;
