--- a/src/Components/Organism/RecentOrdersCard/RecentOrdersCard.module.scss
+++ b/src/Components/Organism/RecentOrdersCard/RecentOrdersCard.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 32px 0;
+  margin-bottom: 16px;
   min-width: 250px;
 }
 
@@ -53,4 +53,14 @@
       }
     }
   }
+}
+
+.line {
+  width: 80%;
+  max-width: 300px;
+  height: 1px;
+  background-color: $gray-color;
+  margin: 22px 0;
+  box-shadow: 0 2px 5px rgb(0, 0, 0);
+  border-radius: 10px;
 }
