--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -1,5 +1,25 @@
 @import "../../Global.scss";
 
+.userLocationModal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: scroll;
+
+  h2 {
+    text-align: center;
+  }
+
+  p {
+    font-size: 10px;
+  }
+
+  span {
+    margin-top: 6px;
+    font-size: 10px;
+  }
+}
+
 .infoSchedule {
   display: flex;
   flex-direction: column;
